RESOLVED FIXED302104
REGRESSION(301719@main)[iOS]: fast/scrolling/ios/bounding-client-rect-on-fixed.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=302104
Summary REGRESSION(301719@main)[iOS]: fast/scrolling/ios/bounding-client-rect-on-fixe...
Marta Darbinyan
Reported 2025-11-06 11:45:18 PST
The following test is a flaky failure on iOS and flaky instances across different PRs in EWS after 301719@main. fast/scrolling/ios/bounding-client-rect-on-fixed.html Diff: -PASS unexpectedValue is undefined +FAIL unexpectedValue should be undefined (of type undefined). Was 92 (of type number). PASS successfullyParsed is true +Some tests failed. Test history: https://results.webkit.org/?suite=layout-tests&test=fast%2Fscrolling%2Fios%2Fbounding-client-rect-on-fixed.html Test result: https://ews-build.webkit.org/#/builders/162/builds/1512
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-06 11:45:33 PST
EWS
Comment 2 2025-11-06 13:14:23 PST
Test gardening commit 302675@main (d10bcd9cf381): <https://commits.webkit.org/302675@main> Reviewed commits have been landed. Closing PR #53553 and removing active labels.
Wenson Hsieh
Comment 3 2025-11-06 15:01:07 PST
EWS
Comment 4 2025-11-07 00:03:03 PST
Committed 302711@main (aa79eb44da12): <https://commits.webkit.org/302711@main> Reviewed commits have been landed. Closing PR #53562 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.